# MorphSQL

./: CMakeLists.txt
cmake/: MLIR.cmake
include/: CMakeLists.txt
include/core/: context.h
include/expr/: CMakeLists.txt  Expr.td  ExprDialect.td  expr.h
include/logical/: CMakeLists.txt  LogicalDialect.td  LogicalOp.td  logical_op.h
include/sql/: sql_parser.h
src/: CMakeLists.txt
src/expr/: CMakeLists.txt  expr.cc
src/logical/: CMakeLists.txt  logical_op.cc
src/sql/: CMakeLists.txt  SqlBase.g4  sql_parser.cc  sql_parser_main.cc
